# Finance_LLM_Tool

./: .gitignore  AGENTS.md
agent/: Notes.txt  Orchestrator_Agent.py  Pydantic Core Concepts.md  analytics.py  run_all.py  run_python_sandbox.py  timings.jsonl  toolbox.py
no-framework/: .gitignore  AGENTS.md  app.py
no-framework/agent_tools/Retrieve Financial Data/: AGENTS.md
no-framework/chat/: AGENTS.md  __init__.py  __main__.py  cli.py  conversation.py  environment.py  http_client.py  tool_registry.py  transcript.py
no-framework/chat/ui/: __init__.py  simple_textual.py
no-framework/diagnostics/: __init__.py  runtime.py  timing.py
no-framework/tests/chat/: _helpers.py  test_tool_registry.py  test_transcript.py
pydantic_framework/: AGENTS.md  README.md  pyproject.toml
pydantic_framework/finance_agent/: __init__.py  agent.py  cli.py  config.py  dependencies.py  prompts.py  tools.py
pydantic_framework/finance_agent/services/: __init__.py  yfinance_loader.py
pydantic_framework/finance_agent/web_app/: __init__.py  analytics.py  app.py  index.html
vercel_framework/: AGENTS.md  package-lock.json  package.json  settings.md  tsconfig.json
vercel_framework/docs/: integration-plan.md  usage.md
vercel_framework/python/: yfinance_service.py
vercel_framework/src/: index.ts
vercel_framework/src/agent/: chatTypes.ts  financeAgent.ts  openRouterUtils.ts  requestCompletion.ts  schemaUtils.ts  systemPrompt.ts  tooling.ts
vercel_framework/src/config/: constants.ts  paths.ts
vercel_framework/src/scripts/: askQuestion.ts  smokeDownloadPriceHistory.ts
(+7 files in other folders)
